--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^2.9.3",
     "compass-mixins": "^0.12.10",
     "express": "^4.17.1",
+    "igniteui-angular": "^10.2.2",
     "jquery": "^3.5.1",
     "ng2-charts": "^2.4.2",
     "node-sass": "^4.14.1",
