--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,9 @@
   "angularCompilerOptions": {
     "preserveWhitespaces": true //Not working in angular 8.1.1
   },
+  "files": [
+    "src/app/Dashboard/dashboard.model.ts"
+  ],
   "include": [
     "src/**/*.ts"
   ],
