--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "petner-app",
   "version": "1.3.0",
-
   "scripts": {
     "ng": "ng",
     "start": "node serve.js -p $PORT",
@@ -32,6 +31,7 @@
     "igniteui-angular": "^10.2.2",
     "jquery": "^3.5.1",
     "ng-image-slider": "^2.6.4",
+    "ng-search-filter": "^1.1.0",
     "ng2-charts": "^2.4.2",
     "node-sass": "^4.14.1",
     "path": "^0.12.7",
