--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "~10.1.6",
     "@angular/cdk": "^10.2.5",
     "@angular/common": "~10.1.6",
@@ -23,6 +24,7 @@
     "@angular/router": "~10.1.6",
     "@mdi/font": "^5.7.55",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@types/googlemaps": "^3.39.10",
     "angular-notifier": "^6.0.1",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.3",
@@ -50,7 +52,6 @@
     "@types/jasmine": "~3.5.14",
     "@types/jasminewd2": "~2.0.8",
     "@types/jquery": "^3.5.4",
-    "@types/node": "~14.11.8",
     "codelyzer": "^6.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
