--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [
+      "googlemaps"
+    ]
   },
   "angularCompilerOptions": {
     "preserveWhitespaces": true //Not working in angular 8.1.1
